--- a/package.json
+++ b/package.json
@@ -7,8 +7,9 @@
   "scripts": {
     "start": "npm-run-all -p -l django watch:js",
     "django": "python manage.py runserver",
-    "start": "watchify -v -o core/static/compiled.js core/static/main.js",
-    "compiled": "browserify -o core/static/compiled.js core/static/main.js"
+    "start:js": "watchify -v -o core/static/compiled.js core/static/main.js",
+    "compile:js": "browserify -o core/static/compiled.js core/static/main.js",
+    "compile": "browserify -o core/static/compiled.js core/static/main.js"
   }
 }
 
