--- a/Pipfile
+++ b/Pipfile
@@ -9,6 +9,7 @@ verify_ssl = true
 django = "*"
 django-debug-toolbar = "*"
 django-registration-redux = "*"
+djangorestframework = "*"
 
 [requires]
 python_version = "3.7"
