--- a/Pipfile
+++ b/Pipfile
@@ -10,6 +10,7 @@ django = "*"
 django-debug-toolbar = "*"
 django-registration-redux = "*"
 djangorestframework = "*"
+django-crispy-forms = "*"
 
 [requires]
 python_version = "3.7"
