--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
   "scripts": {
     "start": "npm-run-all -p django start:js",
     "django": "python3 manage.py runserver",
-    "start:js": "watchify -o core/static/compiled.js core/static/main.js",
-    "compile:js": "browserify -o core/static/compiled.js core/static/main.js",
-    "compile": "browserify -o core/static/compiled.js core/static/main.js"
+    "start:js": "watchify -o core/static/js/compiled.js core/static/js/main.js",
+    "compile:js": "browserify -o core/static/js/compiled.js core/static/js/main.js",
+    "compile": "browserify -o core/static/js/compiled.js core/static/js/main.js"
   }
 }
