--- a/Pipfile
+++ b/Pipfile
@@ -11,6 +11,7 @@ django-debug-toolbar = "*"
 django-registration-redux = "*"
 djangorestframework = "*"
 django-crispy-forms = "*"
+django-filter = "*"
 
 [requires]
 python_version = "3.7"
