--- a/Pipfile
+++ b/Pipfile
@@ -12,6 +12,7 @@ django-registration-redux = "*"
 djangorestframework = "*"
 django-crispy-forms = "*"
 django-filter = "*"
+django-cors-headers = "*"
 
 [requires]
 python_version = "3.7"
