--- a/Pipfile
+++ b/Pipfile
@@ -14,6 +14,7 @@ django-crispy-forms = "*"
 django-filter = "*"
 django-cors-headers = "*"
 django-heroku = "*"
+gunicorn = "*"
 
 [requires]
 python_version = "3.7"
