--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "private": true,
   "dependencies": {
     "browserify": "^16.3.0",
+    "clipboard": "^2.0.4",
     "prismjs": "^1.16.0",
     "watchify": "^3.11.1"
   },
